samples/_failures_safe/1761370933_50cb8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_298ba4e7.c: In function ‘main’:
./samples/SAFE/__tmp_298ba4e7.c:131:12: error: missing terminating " character
  131 |     printf("0: Add\n1: Subtract\n2:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_298ba4e7.c:131:5: error: expected expression at end of input
  131 |     printf("0: Add\n1: Subtract\n2:
      |     ^~~~~~
./samples/SAFE/__tmp_298ba4e7.c:131:5: error: expected declaration or statement at end of input
